2009-03-29:
    Fixed yet another bug in plotpanel relating to the new version of
    matplotlib.
    Fixed a bug in the search replace:
    no scrolling when searching the scriptbug, ID: 2720666
    Fixed bug in the refelctivity plugin:
    Bug in adding a layer with substrate marked, ID: 2633020 
    Fixed bug in the refelctivity plugin:
    ID: 2720662, Plugin does not check if the names are valid
    Fixed bug with no limit on the number of logged fom evaluations
    ID: 2681825, Memory error during fitting
    This was fixed by adding a new class CircBuff in the diffev module.
    It has a maximum length of the buffer before it starts to overwrite
    the oldest value (FIFO). A new parameter in genx.conf "max log elements"
    has been introduced.
    Added the possiblity to change the names of the Layer and stacks in the
    reflectivity plugin.
    ID:2720837, change the Layer/Stack name
    
    
2009-03-10:
    Changed plotpanel. Problems under newer versions of matplotlib

2009-02-12:
    Chaged utils a bit so that it can safely be imported with a *

===============================================================================
2009-01-14: GenX 2b5.1
2008-12-11:
    Found a bug in the tof measurements for neutrons sigma and d had needed
    some truncation in order to get them working. Fixed.
    
2008-12-10:
    Fixed a bug that occured in my bugfix in the Reflectivty plugin from 
    2008-11-21, spotted by Gunnar. 
    Fixed bug in the optimizer saving routines, appeared only on windows and 
    mac...

2008-11-30:
    Changes to the Reflectivty plugin. It now tries to load an existing model
    when the plugin is loaded.
    The loaded plugins is also saved as the model is saved and are tried to
    be loded when the model loaded again. Also it is possible to define 
    default plugins in genx.conf.
    Found a bug in reflectivity plugin:
    The parameter section got many: "p = UserVars()" upon saving. Fixed

2008-11-28: